# data-folds

./: .hgignore  .hgtags  ListT.hs  Streams.hs  data-folds.cabal
Control/Monad/Cont/: ListT.hs
Data/: Folds.hs
Data/Folds/: Accumulator.hs  Class.hs  Internal.hs  Left.hs  Monadic.hs  MultiPass.hs  Pipette.hs  Right.hs
Pipes/: Free.hs  ListT.hs  Void.hs
proofs/: ListT
