Name:           data-folds
Version:        0.1
Synopsis:       Efficient composable folds
Description:
  Efficient composable folds

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://bitbucket.org/Shimuuar/data-folds
Category:       Data
Build-Type:     Simple

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/data-folds

Library
  Ghc-options:          -Wall
  Default-Language:    Haskell2010
  Build-Depends:
    base >=3 && <5,
    transformers,
    free
  Exposed-modules:
    Data.Folds
    Data.Folds.Class
    Data.Folds.Pipette
    Data.Folds.Left
    Data.Folds.Monadic
    Data.Folds.MultiPass
  Other-modules:
    Data.Folds.Internal
